--- a/site/assets/maps/scene.yaml
+++ b/site/assets/maps/scene.yaml
@@ -1,6 +1,6 @@
 cameras:
     camera1:
-        type: perspective
+        type: isometric
 
 lights:
     light1:
@@ -12,7 +12,7 @@ lights:
 sources:
     osm:
         type: TopoJSON
-        url:  //vector.mapzen.com/osm/all/{z}/{x}/{y}.topojson?api_key=vector-tiles-HqUVidw
+        url:  //vector.mapzen.com/osm/all/{z}/{x}/{y}.topojson?api_key=vector-tiles-oyqBb7g
 
 layers:
     earth:
@@ -20,21 +20,21 @@ layers:
         draw:
             polygons:
                 order: 0
-                color: '#ddeeee'
+                color: '#2c2c2c'
 
     landuse:
         data: { source: osm }
         draw:
             polygons:
                 order: 1
-                color: '#aaffaa'
+                color: '#7fdf7f'
 
     water:
         data: { source: osm }
         draw:
             polygons:
                 order: 2
-                color: '#88bbee'
+                color: '#7f7fdf'
 
     roads:
         data: { source: osm }
