White on brown deployed

--- a/site/config.json
+++ b/site/config.json
@@ -1,6 +1,7 @@
 {
+  "title": "Monogram Cube, white on brown",
   "url": "/",
-  "urlx": "http://metamn.io/themes/monogram",
+  "url": "http://metamn.io/themes/monogram-cube/white-on-brown/",
   "images": "assets/images/",
   "icomoon": "icomoon-sprite.svg",
   "javascripts": {
