Favicons added together with a new gulp task to copy them to destination

--- a/site/config.json
+++ b/site/config.json
@@ -1,7 +1,7 @@
 {
   "title": "Monogram Cube, white on brown",
   "url": "/",
-  "url": "http://metamn.io/themes/monogram-cube/white-on-brown/",
+  "urlx": "http://metamn.io/themes/monogram-cube/white-on-brown/",
   "images": "assets/images/",
   "icomoon": "icomoon-sprite.svg",
   "javascripts": {
