Moving to three.js

--- a/site/config.json
+++ b/site/config.json
@@ -7,6 +7,9 @@
   "javascripts": {
     "footer": [
       {
+        "file": "three.min.js"
+      },
+      {
         "file": "hammer.min.js"
       },
       {
