--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs": "0.0.2",
     "gulp-concat": "^2.5.2",
     "gulp-css-globbing": "^0.1.8",
+    "gulp-cssbeautify": "^0.1.3",
     "gulp-data": "^1.2.0",
     "gulp-html-prettify": "0.0.1",
     "gulp-if": "^1.2.5",
@@ -38,6 +39,7 @@
     "gulp-minify-html": "^1.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^5.1.8",
+    "gulp-prettify": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.4.2",
