--- a/site/config.json
+++ b/site/config.json
@@ -1,6 +1,6 @@
 {
   "url": "/",
-  "urlx": "http://metamn.io/themes/monogram",
+  "urlx": "http://metamn.io/monogram-theme/black-vivid/",
   "images": "assets/images/",
   "icomoon": "icomoon-sprite.svg",
   "javascripts": {
